# HookUtilV5

./: .gitignore  CMakeLists.txt  README.md  analysis_server_file.py  auto_test.py  autotest_32_nopie_dynamic.json  autotest_32_nopie_dynamic_output  autotest_32_pie_dynamic_out  autotest_64_pie_dynamic  awd_config.py  babyheap_out  build_debug.sh  build_release.sh  config.h  config.json  config.json.example  generate  generate.c  generate_base.c  generate_tmp.c  hook.c  hook.h  hook.makefile  loader.c  loader_stage_one.c  loader_stage_three.c  loader_stage_two.c  loader_x64.h  loader_x86.h  md5.h  once_time_output  repeater.py  verify.py  x64_syscall.h  x86_syscall.h
.github/workflows/: cmake.yml
arch/amd64/: loader.s  loader_x64.h  unistd_syscall.h  x64_syscall.h
arch/common/: arch.h  syscall.h
arch/i386/: unistd_syscall.h  x86_syscall.h
auto_generate/: config.h
awd/: start.sh
awd/pwn1/: normal_config.json  sandbox_config.json
awd/pwn2/: normal_config.json  sandbox_config.json
awd/resource/: flag  start_awd.sh  start_awd_frp.sh
awd/server/: normal_config.json  sandbox_config.json  server
ctf_awd/backdoor/: build_bk.sh  crazy.c  crazy_asm.c  crazy_asm0  crazy_asm1  crazy_asm_kill0  crazy_asm_kill1  crazy_kill0  crazy_kill1  crazy_m  crazy_m.c
src/auto_generate/: debug_config.h  normal_config.h  sandbox_config.h  stage_one_normal_config.h  stage_one_sandbox_config.h
src/build_tools/: datafile_generate.c  datafile_generate.py  frp_config_generator.c  generate.c  pre_generate.c  stage_one_pre_generate.c
src/include/: hook.h
src/stage_one/: loader.c  loader.ld
src/stage_three/: common.h  normal_loader.c  sandbox_loader.c  snprintf_s.h
src/stage_two/: loader.c
src/utils/: common.h  md5.h  seccomp.h  snprintf_s.h
test/: Makefile  autotest.c  clear_stack  make.sh  start.sh  test.sh  test_all.sh  test_tracffic.sh  test_tracffic_frp.sh  test_tracffic_restrict.sh
test/once_time_test/: config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json  once_time_output
test/resource/: test_poc.sh  test_poc_frp.sh  test_poc_restrict.sh
test/test_target_bin/: autotest_32_nopie_dynamic_half  autotest_32_nopie_static  autotest_32_pie_dynamic_full  autotest_32_pie_dynamic_half  autotest_32_pie_static  autotest_64_nopie_dynamic_full  autotest_64_nopie_dynamic_half  autotest_64_nopie_static  autotest_64_pie_dynamic_full  autotest_64_pie_dynamic_half  autotest_64_pie_static
test/tracffic_test/: 2020_10_19_14_50_39_053699_d7c8.rebuild
test/x64_nopie_dynamic_test/: autotest_64_nopie_dynamic  autotest_64_nopie_dynamic_output  config.json  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json
test/x64_nopie_static_test/: autotest_64_nopie_static_output  config.json  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json
test/x64_pie_dynamic_test/: autotest_64_pie_dynamic_output  config.json  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json
test/x64_pie_static_test/: autotest_64_pie_static_output  config.json  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json
test/x86_nopie_dynamic_test/: autotest_32_nopie_dynamic  autotest_32_nopie_dynamic_output  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  config_new_pt_load_file_1_1.json  config_new_pt_load_memory_0_0.json  config_new_pt_load_memory_0_1.json  config_new_pt_load_memory_1_0.json  config_new_pt_load_memory_1_1.json
test/x86_nopie_static_test/: autotest_32_nopie_static_output  config.json  config_em_frame_file_0_0.json  config_em_frame_file_0_1.json  config_em_frame_file_1_0.json  config_em_frame_file_1_1.json  config_new_pt_load_file_0_0.json  config_new_pt_load_file_0_1.json  config_new_pt_load_file_1_0.json  (+5 more)
tools/: analysis_server.py  auto_test.py  auto_test_analysis_server_not_complete.py  awd_config.py  flag_util.py  frp_config_generator.sh  gen.py  generate_config_json_not_complete.py  io_decrypt_server.py  local_log_process.py  manual_repeater.py  package_python.sh  patch_socket_server.py  repeater.py  share_memory_server.c  stage_one_pre_generate.py  stage_share_memory_server.c  stage_socket_server.c  syscall_test.c  tracffic_process.py  translate_traccfic_to_poc.py  verify.py
utils/: common.h
(+4747 files in other folders)
